[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel>=0.37.0"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "black",
    "isort",
    "flake8",
    "twine",
    "build",
]

[project]
name = "pyshared"
version = "1.5.9"
authors = [{name = "Cary Carter", email = "ccarterdev@gmail.com"}]
description = "A Python library containing common utility functions for use across multiple codebases, filling gaps not covered by the standard Python libraries."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",   # or "Development Status :: 4 - Beta", "Development Status :: 5 - Production/Stable"
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Framework :: Django",
    "Framework :: Flask",
    "Framework :: Pyramid",
    "Framework :: Twisted",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Natural Language :: English",
    "Typing :: Typed",
]

[project.urls]
Home = "https://github.com/cc-d/PyShared"
ChangeLog = "https://github.com/cc-d/PyShared/blob/main/CHANGELOG.md"